--- a/package.json
+++ b/package.json
@@ -1,47 +1,25 @@
 {
   "name": "brainwave",
-  "private": true,
   "version": "1.0.0",
+  "description": "\"Brainwave is a sleek and intuitive note-taking app that helps you capture, organize, and share your ideas in real-time. Whether for brainstorming, studying, or project collaboration, Brainwave keeps your thoughts in sync and at your fingertips with smart syncing, voice-to-text, and easy organization features.\",",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "both": "concurrently \"npm run dev\" \"npx nodemon backend/index.js\""
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-slot": "^1.1.1",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "concurrently": "^9.1.2",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-validator": "^7.2.1",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.474.0",
-    "mongodb": "^6.12.0",
+    "localStorage": "^1.0.4",
     "mongoose": "^8.9.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.3",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@types/node": "^22.12.0",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.17.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "globals": "^15.14.0",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
-    "vite": "^6.0.5"
+    "nodemon": "^3.1.9",
+    "npm": "^11.0.0"
   }
 }
